# EBookToAudio

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-31-ebook-to-audio-implementation.md  2026-06-06-ximalaya-studio-draft-publishing.md
docs/superpowers/specs/: 2026-05-31-ebook-to-audio-design.md  2026-06-06-ximalaya-studio-draft-publishing-design.md
scripts/: login-ximalaya-chrome.sh  start-ximalaya-chrome.sh
src/ebook_to_audio/: __init__.py  audio_builder.py  book_parser.py  chapter_splitter.py  config.py  job_runner.py  llm_client.py  mimo_client.py  models.py  repository.py  storage.py  text_cleaner.py  text_segmenter.py  web.py  ximalaya_publisher.py
src/ebook_to_audio/static/: app.js  index.html  styles.css
testEpub/: Selected Stories of O. Henry.epub
tests/: static_app_logic_test.js  test_audio_builder.py  test_book_parser.py  test_chapter_splitter.py  test_config.py  test_llm_client.py  test_mimo_client.py  test_repository.py  test_static_ui.py  test_storage.py  test_text_cleaner.py  test_text_segmenter.py  test_translation_runner.py  test_tts_runner.py  test_web_books.py  test_web_jobs.py  test_ximalaya_publisher.py
